# MLSec-Transfer-Attacks

./: .gitattributes  .gitignore  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt  script.ipynb  transfer-attacks.ipynb
config/: default.yaml  example.yml  fast_test.yaml
results/: config_snapshot_50_1776370469.46866.yaml  config_snapshot_50_1776961619.9666862.yaml  results.csv  summary.md
src/: __init__.py  attacks.py  data.py  evaluate.py  metadata.py  models.py  reporting.py
src/config/: load_config.py
src/data/: filtering.py
src/models/: model_utils.py  model_wrapper.py  surrogate_loader.py  target_loader.py
tests/: load_surrogate_test.py  load_target_test.py  test_setup.py
