[project]
name = "mlsec-transfer-attacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "adversarial-robustness-toolbox>=1.20.1",
    "foolbox>=3.3.4",
    "matplotlib>=3.10.8",
    "pyside6>=6.10.2",
    "robustbench",
    "torch>=2.10.0",
]

[tool.uv.sources]
robustbench = { git = "https://github.com/RobustBench/robustbench.git" }
