[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-sec-transfer-attack"
version = "0.1.0"
description = "Transfer-based adversarial attack study on CIFAR-10 RobustBench models"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "torchvision",
    "robustbench",
    "torchattack",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pyyaml",
    "tabulate",
    "git+https://github.com/RobustBench/robustbench.git"
]

[tool.setuptools]
packages = ["src"]
